# Wearable_ECG_ADS1293_nrf52840

./: .gitignore  README.md  lbs.c  lbs.h
PCB_AFE_ADS1293/: ADS1293.kicad_sch  AFE_03.csv  AFE_03.kicad_pcb  AFE_03.kicad_prl  AFE_03.kicad_pro  AFE_03.kicad_sch  AFE_03.xml  Power Supply.kicad_sch  fp-info-cache
PCB_AFE_ADS1293/AFE_Gerber/: AFE_03-B_Cu.gbl  AFE_03-B_Mask.gbs  AFE_03-B_Paste.gbp  AFE_03-B_Silkscreen.gbo  AFE_03-Edge_Cuts.gm1  AFE_03-F_Cu.gtl  AFE_03-F_Mask.gts  AFE_03-F_Paste.gtp  AFE_03-F_Silkscreen.gto  AFE_03-In1_Cu.g2  AFE_03-In2_Cu.g3  AFE_03-NPTH-drl_map.gbr  AFE_03-NPTH.drl  AFE_03-PTH-drl_map.gbr  AFE_03-PTH.drl
PCB_AFE_ADS1293/bom/: ibom.html
Wearable_ECG_ADS1293_nrf52840/: CMakeLists.txt  adafruit_feather_nrf52840.overlay  prj.conf
Wearable_ECG_ADS1293_nrf52840/src/: ADS1293.c  ADS1293.h  Queue.c  Queue.h  batteryManagement.c  batteryManagement.h  bluetooth_connection.c  bluetooth_connection.h  connexion_check.c  connexion_check.h  detect_activity.c  detect_activity.h  imu_trigger.c  imu_trigger.h  lsm6dso.c  lsm6dso.h  main.c  sd_card_flash.c  sd_card_flash.h  temperatureSens.c  temperatureSens.h
Wearable_ECG_BLE_android_app/: build.gradle.kts  local.properties  settings.gradle.kts
Wearable_ECG_BLE_android_app/Android_Blinky_original_working/: README.md
Wearable_ECG_BLE_android_app/app/: build.gradle.kts
Wearable_ECG_BLE_android_app/app/src/main/: AndroidManifest.xml
Wearable_ECG_BLE_android_app/blinky/ui/: build.gradle.kts
Wearable_ECG_BLE_python_gui/: realtime_ecg_ble.py
(+31 files in other folders)
